# SponzaRenderer

./: .gitignore  CMakeLists.txt  README.md  config.ini
app/: CMakeLists.txt
app/src/: main.cpp
engine/tscore/src/system/: info.cpp
engine/tsengine/inc/tsengine/platform/: window.h
engine/tsengine/src/: tsengine.cpp
engine/tsengine/src/platform/: window.cpp
engine/tsgraphics/src/: rendermodule.cpp
engine/tsgraphics/src/shader/: shadermanager.cpp
